--- a/app/src/main/res/layout/bloodsugar.xml
+++ b/app/src/main/res/layout/bloodsugar.xml
@@ -156,13 +156,12 @@
             android:background="@drawable/roundbutton"
             android:backgroundTint="#2DE160"
             android:text="Save"
-            android:textSize="20sp"
+            android:textSize="16sp"
+            android:layout_gravity="center_horizontal"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/hourSwitch"
-            android:layout_marginStart="70dp"
-            android:layout_marginEnd="70dp"
+            app:layout_constraintTop_toBottomOf="@id/hourSwitch"
             android:layout_marginTop="30dp" />
 
         <Button
@@ -172,15 +171,14 @@
             android:background="@drawable/roundbutton"
             android:backgroundTint="#FF0909"
             android:text="Cancel"
-            android:textSize="20sp"
+            android:textSize="16sp"
+            android:layout_gravity="center_horizontal"
             android:textColor="@color/colorTextBlack"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/saveBtn"
+            app:layout_constraintTop_toBottomOf="@id/saveBtn"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginStart="70dp"
-            android:layout_marginEnd="70dp"
             android:layout_marginTop="30dp" />
 
     </LinearLayout>
