--- a/app/src/main/res/layout/exercise_log.xml
+++ b/app/src/main/res/layout/exercise_log.xml
@@ -36,130 +36,169 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.077" />
 
-    <EditText
-        android:id="@+id/TypeField"
-        android:layout_width="270dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="48dp"
-        android:background="@drawable/roundbutton"
-        android:backgroundTint="@color/colorNeutralWhite"
-        android:hint="Type of exercise"
-        android:textAlignment="center"
-        android:inputType="text"
-        android:padding="15dp"
-        android:textColor="#000000"
-        android:textColorHighlight="#000000"
-        android:textColorHint="#000000"
-        app:layout_constraintBottom_toTopOf="@+id/saveBtn"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.496"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/Title"
-        app:layout_constraintVertical_bias="0.017"
-        tools:ignore="MissingConstraints" />
 
-
-    <EditText
-        android:id="@+id/DurationField"
-        android:layout_width="270dp"
-        android:layout_height="50dp"
-        android:background="@drawable/roundbutton"
-        android:backgroundTint="@color/colorNeutralWhite"
-        android:hint="Duration"
-        android:textAlignment="center"
-        android:inputType="text"
-        android:padding="15dp"
-        android:textColor="#000000"
-        android:textColorHighlight="#000000"
-        android:textColorHint="#000000"
-        app:layout_constraintBottom_toTopOf="@+id/datePick"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.496"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/TypeField"
-        tools:ignore="MissingConstraints" />
-
-    <TextView
-        android:id="@+id/datePick"
-        android:layout_width="130dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="48dp"
-        android:background="@drawable/roundbutton"
-        android:backgroundTint="@color/colorNeutralWhite"
-        android:hint="Date"
-        android:padding="15dp"
-        android:textAlignment="center"
-        android:textColor="#000000"
-        android:textColorHighlight="#000000"
-        android:textColorHint="#000000"
-        app:layout_constraintBottom_toTopOf="@+id/saveBtn"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.249"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/Title"
-        app:layout_constraintVertical_bias="0.811"
-        tools:ignore="MissingConstraints" />
-
-    <TextView
-        android:id="@+id/timePick"
-        android:layout_width="130dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="48dp"
-        android:background="@drawable/roundbutton"
-        android:backgroundTint="@color/colorNeutralWhite"
-        android:hint="Time"
-        android:padding="15dp"
-        android:textAlignment="center"
-        android:textColor="#000000"
-        android:textColorHighlight="#000000"
-        android:textColorHint="#000000"
-        app:layout_constraintBottom_toTopOf="@+id/saveBtn"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.758"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/Title"
-        app:layout_constraintVertical_bias="0.808"
-        tools:ignore="MissingConstraints" />
-
-    <Button
-        android:id="@+id/cancelBtn"
-        android:layout_width="270dp"
-        android:layout_height="50dp"
-        android:layout_centerHorizontal="true"
-        android:background="@drawable/roundbutton"
-        android:backgroundTint="#FF0909"
-        android:bottomLeftRadius="10dp"
-        android:bottomRightRadius="10dp"
-        android:text="Cancel"
-        android:textSize="15dp"
-        android:topLeftRadius="10dp"
-        android:topRightRadius="10dp"
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="570dp"
+        android:orientation="vertical"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="16dp"
+        android:layout_marginStart="48dp"
+        android:layout_marginEnd="48dp"
+        app:layout_constraintTop_toBottomOf="@id/LogoView"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.914" />
-
-    <Button
-        android:id="@+id/saveBtn"
-        android:layout_width="270dp"
-        android:layout_height="50dp"
-        android:layout_centerHorizontal="true"
-        android:background="@drawable/roundbutton"
-        android:backgroundTint="#2DE160"
-        android:bottomLeftRadius="10dp"
-        android:bottomRightRadius="10dp"
-        android:text="Save"
-        android:textSize="15dp"
-        android:topLeftRadius="10dp"
-        android:topRightRadius="10dp"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.496"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.814" />
+        app:layout_constraintHorizontal_bias="0.5">
 
+
+        <TextView
+            android:id="@+id/TypeView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Type of exercise"
+            android:textColor="@color/colorNeutralWhite"
+            android:textAlignment="center"
+            android:textStyle="bold"
+            android:textSize="22sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+
+        <EditText
+            android:id="@+id/TypeField"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:background="@drawable/roundbutton"
+            android:backgroundTint="@color/colorNeutralWhite"
+            android:hint="Type of exercise"
+            android:inputType="text"
+            android:padding="15dp"
+            android:textColor="@color/colorTextBlack"
+            android:textColorHighlight="@color/colorTextBlack"
+            android:textColorHint="@color/colorTextBlack"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/TypeView"
+            android:layout_marginTop="8dp" />
+
+        <TextView
+            android:id="@+id/DurationView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Duration"
+            android:textAlignment="center"
+            android:textStyle="bold"
+            android:textSize="22sp"
+            android:textColor="@color/colorNeutralWhite"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/TypeField"
+            android:layout_marginTop="30dp" />
+
+
+        <EditText
+            android:id="@+id/DurationField"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:background="@drawable/roundbutton"
+            android:backgroundTint="@color/colorNeutralWhite"
+            android:hint="Duration"
+            android:inputType="text"
+            android:padding="15dp"
+            android:textColor="@color/colorTextBlack"
+            android:textColorHighlight="@color/colorTextBlack"
+            android:textColorHint="@color/colorTextBlack"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/DurationView"
+            android:layout_marginTop="8dp" />
+
+        <TextView
+            android:id="@+id/DateTimeView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Date and Time"
+            android:textAlignment="center"
+            android:textStyle="bold"
+            android:textSize="22sp"
+            android:textColor="@color/colorNeutralWhite"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/DurationField"
+            android:layout_marginTop="30dp" />
+
+        <TextView
+            android:id="@+id/datePick"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:background="@drawable/roundbutton"
+            android:backgroundTint="@color/colorNeutralWhite"
+            android:hint="Date"
+            android:padding="15dp"
+            android:textColor="@color/colorTextBlack"
+            android:textColorHighlight="@color/colorTextBlack"
+            android:textColorHint="@color/colorTextBlack"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/DateTimeView"
+            android:layout_marginTop="8dp" />
+
+        <TextView
+            android:id="@+id/timePick"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:background="@drawable/roundbutton"
+            android:backgroundTint="@color/colorNeutralWhite"
+            android:hint="Time"
+            android:padding="15dp"
+            android:textColor="@color/colorTextBlack"
+            android:textColorHighlight="@color/colorTextBlack"
+            android:textColorHint="@color/colorTextBlack"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/datePick"
+            android:layout_marginTop="16dp" />
+
+        <Button
+            android:id="@+id/saveBtn"
+            android:layout_width="180dp"
+            android:layout_height="50dp"
+            android:background="@drawable/roundbutton"
+            android:backgroundTint="#2DE160"
+            android:text="Save"
+            android:textSize="16sp"
+            android:layout_gravity="center_horizontal"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/timePick"
+            android:layout_marginTop="34dp" />
+
+        <Button
+            android:id="@+id/cancelBtn"
+            android:layout_width="180dp"
+            android:layout_height="50dp"
+            android:background="@drawable/roundbutton"
+            android:backgroundTint="#FF0909"
+            android:text="Cancel"
+            android:textSize="16sp"
+            android:layout_gravity="center_horizontal"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/saveBtn"
+            android:layout_marginBottom="20dp"
+            android:layout_marginTop="30dp" />
+
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
